# micro-ai-projects

./: .gitignore  README.md  pyproject.toml
month-01/week-01/project-01-schema-enforcement/: README.md  ai.py  main.py  models.py  pyproject.toml
month-01/week-01/project-02-zod-validation/: README.md  package-lock.json  package.json
month-01/week-01/project-02-zod-validation/src/: ai.ts  index.ts  schemas.ts
month-01/week-01/project-03-native-tool-calling/: README.md  ai.py  main.py  models.py  pyproject.toml  tools.py
month-01/week-01/project-04-dependency-injection/: README.md  ai.py  main.py  models.py  pyproject.toml  tools.py
month-01/week-02/project-05-initializing-fastmcp-server/: README.md  main.py  pyproject.toml
month-01/week-02/project-06-progressive-disclosure/: README.md  main.py  pyproject.toml
month-01/week-02/project-07-programmatic-mcp-client/: README.md  client.py  main.py  pyproject.toml  server.py
month-01/week-02/project-08-e2e-orchestration/: README.md  ai.py  main.py  pyproject.toml  server.py
month-01/week-02/project-09-semantic-routing/: README.md  ai.py  main.py  pyproject.toml  router.py
month-01/week-03/project-10-durable-execution/: README.md  ai.py  main.py  pyproject.toml
month-01/week-03/project-11-array-based-context/: README.md  ai.py  main.py  pyproject.toml
