```toml
[project]
name = "micro-ai-projects"
version = "0.1.0"
description = "A curated collection of hands-on AI engineering micro-projects covering structured outputs, MCP, agent architectures, evaluation, guardrails, and modern AI infrastructure."
readme = "README.md"
requires-python = ">=3.13"

authors = [
    { name = "Suriya Sureshkumar" }
]

keywords = [
    "ai",
    "llm",
    "agents",
    "pydantic-ai",
    "mcp",
    "fastapi",
    "rag",
    "evaluation",
    "guardrails",
    "micro-projects",
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "fastapi>=0.138.0",
    "pydantic>=2.13.4",
    "pydantic-ai>=2.0.0",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.49.0",
]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
    "B",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
```
