[project]
name = "project-01-schema-enforcement"
version = "0.1.0"
description = "Demonstrates strict structured output enforcement using Pydantic AI and JSON Schema."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.138.1",
    "pydantic>=2.13.4",
    "pydantic-ai>=2.0.0",
    "python-dotenv>=1.2.2",
]

[tool.uv]
package = false
