[project]
name = "project-03-native-tool-calling"
version = "0.1.0"
description = "Demonstrates native tool calling in Pydantic AI using local Python functions for deterministic task execution."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.138.1",
    "pydantic>=2.13.4",
    "pydantic-ai>=2.0.0",
    "python-dotenv>=1.2.2",
]

[tool.uv]
package = false
