[project]
name = "project-05-initializing-fastmcp-server"
version = "0.1.0"
description = "Demonstrates how to build a standalone FastMCP server by exposing native Python functions as MCP tools over the Model Context Protocol."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=2.11.1",
]

[tool.uv]
package = false
