[project]
name = "project-08-end-to-end-mcp-orchestration"
version = "0.1.0"
description = "Demonstrates end-to-end AI tool orchestration using Pydantic AI and the Model Context Protocol (MCP)."
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "fastmcp>=3.4.3",
    "pydantic-ai>=2.5.1",
    "python-dotenv>=1.2.2",
]
