[project]
name = "project-09-semantic-routing"
version = "0.1.0"
description = "Semantic, context-aware routing for specialized downstream agent selection."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.139.0",
    "pydantic-ai>=2.6.0",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.50.2",
]
