[project]
name = "project-10-durable-execution"
version = "0.1.0"
description = "Cross-provider fallback mechanics for resilient AI execution."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.139.0",
    "pydantic-ai>=2.9.0",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.51.0",
]
